Bug 84968 - Fix additive by animations for most SMIL list types
Summary: Fix additive by animations for most SMIL list types
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikolas Zimmermann
URL:
Keywords:
Depends on:
Blocks: 41761 36729 85051
  Show dependency treegraph
 
Reported: 2012-04-26 08:33 PDT by Nikolas Zimmermann
Modified: 2012-04-28 00:05 PDT (History)
1 user (show)

See Also:


Attachments
Patch (104.65 KB, patch)
2012-04-26 08:41 PDT, Nikolas Zimmermann
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolas Zimmermann 2012-04-26 08:33:08 PDT
Fix additive by animations for most SMIL list types: SVGAnimatedLengthList/SVGAnimatedNumberList/SVGAnimatedPoints
AnimatedPath / AnimatedTransformList (the remaining types after the next patch) will be handled separated, to keep patches smaller.
Comment 1 Nikolas Zimmermann 2012-04-26 08:41:49 PDT
Created attachment 139010 [details]
Patch
Comment 2 Nikolas Zimmermann 2012-04-26 08:51:44 PDT
Committed r115320: <http://trac.webkit.org/changeset/115320>