Fix additive by animations for most SMIL list types https://bugs.webkit.org/show_bug.cgi?id=84968

Reviewed by Antti Koivisto.

Source/WebCore:

Unify SMIL list animation code, to correctly respect the underlying from value for by-animations.
Add lots of new tests covering by-animations for all primitives (except AnimatedPath/TransformList).
AnimatedTransformList is not working correctly yet, and will be covered in a follow-up patch.
AnimatdPath by-animations are complex, and thus also handled in another follow-up patch.

Tests: svg/animations/additive-type-by-animation.html
       svg/animations/length-list-animation-expected.svg
       svg/animations/length-list-animation.svg
       svg/animations/svglength-additive-by-1.html
       svg/animations/svglength-additive-by-2.html
       svg/animations/svglength-additive-by-3.html
       svg/animations/svglength-additive-by-4.html
       svg/animations/svglength-additive-by-5.html
       svg/animations/svglength-additive-by-6.html
       svg/animations/svglength-additive-from-by-1.html
       svg/animations/svglength-additive-from-by-2.html
       svg/animations/svglength-additive-from-by-3.html
       svg/animations/svglength-additive-from-by-4.html

* svg/SVGAnimatedLengthList.cpp:
(WebCore::SVGAnimatedLengthListAnimator::addAnimatedTypes):
(WebCore::SVGAnimatedLengthListAnimator::calculateAnimatedValue):
* svg/SVGAnimatedNumberList.cpp:
(WebCore::SVGAnimatedNumberListAnimator::addAnimatedTypes):
(WebCore::SVGAnimatedNumberListAnimator::calculateAnimatedValue):
* svg/SVGAnimatedPointList.cpp:
(WebCore::SVGAnimatedPointListAnimator::addAnimatedTypes):
(WebCore::SVGAnimatedPointListAnimator::calculateAnimatedValue):
* svg/SVGAnimationElement.h:
(WebCore::SVGAnimationElement::adjustFromToListValues):

LayoutTests:

Add lots of new tests covering SMIL by-animations on all primitives.

* svg/animations/additive-type-by-animation-expected.txt: Added.
* svg/animations/additive-type-by-animation.html: Added.
* svg/animations/length-list-animation-expected.svg: Added.
* svg/animations/length-list-animation.svg: Added.
* svg/animations/non-additive-type-by-animation-expected.txt:
* svg/animations/resources/additive-type-by-animation.svg: Added.
* svg/animations/resources/non-additive-type-by-animation.svg:
* svg/animations/resources/svglength-additive-by-1.svg: Added.
* svg/animations/resources/svglength-additive-by-2.svg: Added.
* svg/animations/resources/svglength-additive-by-3.svg: Added.
* svg/animations/resources/svglength-additive-by-4.svg: Added.
* svg/animations/resources/svglength-additive-by-5.svg: Added.
* svg/animations/resources/svglength-additive-by-6.svg: Added.
* svg/animations/resources/svglength-additive-from-by-1.svg: Added.
* svg/animations/resources/svglength-additive-from-by-2.svg: Added.
* svg/animations/resources/svglength-additive-from-by-3.svg: Added.
* svg/animations/resources/svglength-additive-from-by-4.svg: Added.
* svg/animations/script-tests/additive-type-by-animation.js: Added.
(checkBaseVal):
(sample1):
(sample2):
(sample3):
(executeTest):
* svg/animations/script-tests/non-additive-type-by-animation.js:
(sample):
* svg/animations/script-tests/svglength-additive-by-1.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(executeTest):
* svg/animations/script-tests/svglength-additive-by-2.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(executeTest):
* svg/animations/script-tests/svglength-additive-by-3.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/script-tests/svglength-additive-by-4.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/script-tests/svglength-additive-by-5.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/script-tests/svglength-additive-by-6.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/script-tests/svglength-additive-from-by-1.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(executeTest):
* svg/animations/script-tests/svglength-additive-from-by-2.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/script-tests/svglength-additive-from-by-3.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/script-tests/svglength-additive-from-by-4.js: Added.
(sample1):
(sample2):
(sample3):
(sample4):
(sample5):
(sample6):
(executeTest):
* svg/animations/svglength-additive-by-1-expected.txt: Added.
* svg/animations/svglength-additive-by-1.html: Added.
* svg/animations/svglength-additive-by-2-expected.txt: Added.
* svg/animations/svglength-additive-by-2.html: Added.
* svg/animations/svglength-additive-by-3-expected.txt: Added.
* svg/animations/svglength-additive-by-3.html: Added.
* svg/animations/svglength-additive-by-4-expected.txt: Added.
* svg/animations/svglength-additive-by-4.html: Added.
* svg/animations/svglength-additive-by-5-expected.txt: Added.
* svg/animations/svglength-additive-by-5.html: Added.
* svg/animations/svglength-additive-by-6-expected.txt: Added.
* svg/animations/svglength-additive-by-6.html: Added.
* svg/animations/svglength-additive-from-by-1-expected.txt: Added.
* svg/animations/svglength-additive-from-by-1.html: Added.
* svg/animations/svglength-additive-from-by-2-expected.txt: Added.
* svg/animations/svglength-additive-from-by-2.html: Added.
* svg/animations/svglength-additive-from-by-3-expected.txt: Added.
* svg/animations/svglength-additive-from-by-3.html: Added.
* svg/animations/svglength-additive-from-by-4-expected.txt: Added.
* svg/animations/svglength-additive-from-by-4.html: Added.

Canonical link: https://commits.webkit.org/102469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115320 268f45cc-cd09-0410-ab3c-d52691b4dbfc